Bug 125173 - FILESAVE XLSX Hyperlink inserted to text box lost after export
Summary: FILESAVE XLSX Hyperlink inserted to text box lost after export
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: XLSX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-05-08 12:47 UTC by NISZ LibreOffice Team
Modified: 2019-05-14 14:55 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original and exported document side by side in Calc. (119.81 KB, image/png)
2019-05-08 12:49 UTC, NISZ LibreOffice Team
Details
Example ODS file from Calc. (7.67 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-05-08 12:49 UTC, NISZ LibreOffice Team
Details
The original file saved as XLSX. (5.95 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-05-08 12:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-08 12:47:09 UTC
Description:
Hyperlink inserted to text box lost when the document is saved in XLSX format.

Steps to Reproduce:
1. Create a new document in LibreOffice Calc.
2. Choose Insert → Text Box.
3. Create a text box and type text.
4. Select the text box and choose Insert → Hyperlink.
5. Type/select the destination.
6. Save the file as XLSX.
7. Reload the file.


Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work after export.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-08 12:49:21 UTC
Created attachment 151243 [details]
Screenshot of the original and exported document side by side in Calc.
Comment 2 NISZ LibreOffice Team 2019-05-08 12:49:57 UTC
Created attachment 151244 [details]
Example ODS file from Calc.
Comment 3 NISZ LibreOffice Team 2019-05-08 12:50:34 UTC
Created attachment 151245 [details]
The original file saved as XLSX.
Comment 4 V Stuart Foote 2019-05-08 15:41:27 UTC
Confirming on Windows 10 Home 64-bit en-US with
Version: 6.2.3.2 (x64)
Build ID: aecc05fe267cc68dde00352a451aa867b3b546ac
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The Draw TextBox is exported to OOXML .xlsx, but there is no _rels or .rels relationships file for a hyperlink associated with the drawing1.xml generated for the Draw TextBox.

Working with Word 2016, a link added to the TextBox drawing1.xml, is recorded into the OOXML "drawings" subfolder "_rels" as drawing1.xml.rels

LO Calc then correctly reads the hyperlink Excel 2016 writes for the drawing object.

So, the OOXML/MS Calc 2007-2019 Export filter of a Draw TextBox in Calc does not  seem to parse the hyperlink. And it is missing on round trip. Looks like Draw shapes do get the _rels handling , but not so the Draw TextBox.
Comment 5 Commit Notification 2019-05-10 11:38:12 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5ddaaa0c86a9c7851d2277d56b379a3412b1fff3%5E%21

tdf#125173 fix hyperlink inserted to text box

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2019-05-14 14:55:58 UTC
Verified with LO master and fileopen in MSO. Xls was OK.