tdf#125173 fix hyperlink inserted to text box

Hyperlink inserted to text box lost after export.

Change-Id: I796e54339292cb4a5e98de1ead6558d66587d353
Reviewed-on: https://gerrit.libreoffice.org/72033
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>